# trevo-traits-registry

./: .gitignore  LICENSE  README.md  registry.json
.github/workflows/: python_tests.yml
examples/: appagent.json  compliance_provider.json  fungible_token.json  identity_provider.json  nft_collection.json  nft_token.json
py-traits-validator/: README.md  pyproject.toml
py-traits-validator/scripts/: bundle_registry.py
py-traits-validator/src/: traitsvalidator.pyi
py-traits-validator/src/traitsvalidator/: __init__.py  traits_validator.py  traits_validator.pyi
py-traits-validator/tests/: test_registry.py
traits/: metadata_schema.json
traits/finance.trevo.wallet/nft_collection_listing_image/: trait.json
traits/finance.trevo.wallet/nft_token_attributes/: trait.json
traits/finance.trevo.wallet/nft_token_cover_image/: trait.json
traits/finance.trevo.wallet/nft_token_description/: trait.json
traits/finance.trevo.wallet/nft_token_listing_image/: trait.json
traits/finance.trevo.wallet/price_feed/: trait.json
traits/finance.trevo.wallet/square_icon/: trait.json
traits/fungible/: trait.json
traits/named/: trait.json
