[project]
name = "trevo-traits-validator"
version = "1.0.0"
authors = [
    { name="Trevo Comp", email="support@trevo.finance" },
]
description = "Validator of metadata traits in Trevo ecosystem"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2 Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = ["jsonschema == 4.24.0"]


[project.optional-dependencies]
test = [
    "mypy",
    "pydantic",
    "pylint[spelling]>=3.3.7",
    "pylint-pydantic>=0.3.5",
    "pyright",
    "pytest",
    "ruff",
    "requests",
    "types-jsonschema",
    "types-requests",
]


[project.urls]
Homepage = "https://github.com/trevo-finance/trevo-traits-registry"
Issues = "https://github.com/trevo-finance/trevo-traits-registry/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "py.typed", "*.pyi"]


[tool.ruff]
target-version = "py312"
line-length = 120
fix = false

exclude = ["env", ".env", ".venv", "build"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C90",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "COM",
    "DTZ",
    "EM",
    "FA",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    "PL",
    "TRY",
    "RUF",
]
ignore = ["COM812", "UP040"]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]


[tool.mypy]
python_version = "3.12"
exclude = ["env", ".env", ".venv", "build"]
